--- a/src/main/resources/templates/sample/exLayout1.html
+++ b/src/main/resources/templates/sample/exLayout1.html
@@ -7,6 +7,9 @@
 <body>
     <!-- thymeleaf th:replace 확인 -->
     <h1>Fragment Test</h1>
+    <div style="border: 1px solid blue">
+        <th:block th:replace="~{/fragments/fragment2}"></th:block>
+    </div>
     <h1>Layout 1 - 1</h1>
     <div th:replace="~{/fragments/fragment1 :: part1}"></div>
 
