[2022-08-27 김민정] Rest API 댓글 구현 완료

--- a/src/main/resources/static/simplesidebar/css/styles.css
+++ b/src/main/resources/static/simplesidebar/css/styles.css
@@ -4904,6 +4904,19 @@ textarea.form-control-lg {
   top: -1px;
 }
 
+
+.badge.badge-secondary {
+    background-color: blue;
+    border: solid 2px;
+    border-color: #FF00FF;
+}
+
+.badge.badge-info {
+    background-color: white;
+    color: black;
+    border: solid 2px;
+}
+
 .alert {
   position: relative;
   padding: 1rem 1rem;
