--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -27,10 +27,188 @@
             <label>ModDate</label>
             <input type="text" class="form-control" name="moddate" th:value="${#temporals.format(dto.modDate, 'yyyy/mm/dd HH:mm:ss')}" readonly>
         </div><br>
-        <!--
-        <a th:href="@{/board/modify(gno=${dto.gno}, page=${requestDTO.page}, type=${requestDTO.type}, keyword=${requestDTO.keyword})}"><button type="button" class="btn btn-primary">수정하기</button></a>
+        <a th:href="@{/board/modify(bno=${dto.bno}, page=${requestDTO.page}, type=${requestDTO.type}, keyword=${requestDTO.keyword})}"><button type="button" class="btn btn-primary">수정하기</button></a>
         <a th:href="@{/board/list(page=${requestDTO.page}, type=${requestDTO.type}, keyword=${requestDTO.keyword})}"><button type="button" class="btn btn-info">목록으로</button></a>
-        -->
+        <div>
+            <div class="mt-4">
+                <h5><span class="badge badge-info addReply">Add Reply</span></h5>
+                <h5><span class="badge badge-secondary replyCnt">Reply Count [[${dto.replyCnt}]]</span></h5>
+            </div>
+            <div class="list-group replyList">
+            </div>
+        </div>
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Add Reply</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input class="form-control" tye="text" name="replyText" placeholder="댓글입력">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" tye="text" name="replyer" placeholder="작성자">
+                            <input type="hidden" name="rno">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger replyRemove">Remove</button>
+                        <button type="button" class="btn btn-warning replyModify">Modify</button>
+                        <button type="button" class="btn btn-primary replySave">Save</button>
+                        <button type="button" class="btn btn-outline-secondary replyClose" data-dismiss="modal">Close</button>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </th:block>
 </th:block>
+<script th:inline="javascript">
+    $(document).ready(function() {
+        var bno = [[${dto.bno}]];
 
+        var listGroup = $(".replyList");
+
+        // 날짜 처리를 위한 함수
+        function formatTime(sStr) {
+            var date = new Date(sStr);
+
+            return date.getFullYear() + "/" + (date.getMonth() + 1) + "/" + date.getDate() + " " + date.getHours() + ":" + date.getMinutes();
+        }
+
+        // 특정 게시글의 덧글을 처리하는 함수
+        function loadReplyJson() {
+            $.getJSON("/replies/board/" + bno, function(arr) {
+               var str = "";
+
+               $(".replyCnt").html("Reply Count " + arr.length);
+
+               $.each(arr, function(idx, reply) {
+                   str += ' <div class="card-body" data-rno="'+reply.rno+'"><b>' + reply.rno + '</b>';
+                   str += ' <h5 class="card-title">' + reply.text + '</h5>';
+                   str += ' <h6 class="card-subtitle mb-2 text-muted" >' + reply.replyer + '</h6>';
+                   str += ' <p class="card-text">' + formatTime(reply.regDate) + '</p>';
+                   str += ' </div>';
+               });
+
+               listGroup.html(str);
+            });
+        }
+
+        $(".replyCnt").click(function() {
+           loadReplyJson();
+        });
+
+        var modal = $(".modal");
+
+        $(".addReply").on("click", function() {
+            modal.modal("show");
+
+            // 입력창 초기화
+            $("input[name='replyText']").val("");
+            $("input[name='replyer']").val("");
+
+            // 모든 버튼 숨기기
+            $(".modal-footer .btn").hide();
+
+            // 등록시 필요한 버튼만 show
+            $(".replySave, .replyClose").show();
+        });
+
+        $(".replySave").on("click", function() {
+            var reply = {
+                bno: bno,
+                text: $("input[name='replyText']").val(),
+                replyer: $("input[name='replyer']").val()
+            };
+
+            console.log(reply);
+
+            // ajax 처리
+            $.ajax({
+                url: "/replies/",
+                method: "post",
+                data: JSON.stringify(reply),
+                contentType: "application/json; charset-utf-8",
+                dataType: "json",
+                success: function(aRtn) {
+                    var newRno = parseInt(aRtn);
+
+                    alert(newRno + "번 댓글이 등록되었습니다.");
+                    modal.modal("hide");
+                    loadReplyJson();
+                }
+            })
+        });
+
+        // replyList > 하위 card-body 클래스에 이벤트 지정 가능
+        $(".replyList").on("click", ".card-body", function() {
+            var rno = $(this).data("rno");
+
+            $("input[name='replyText']").val($(this).find(".card-title").html());
+            $("input[name='replyer']").val($(this).find(".card-subtitle").html());
+            $("input[name='rno']").val(rno);
+
+            $(".modal-footer .btn").hide();
+            $(".replyRemove, .replyModify, .replyClose").show();
+
+            modal.modal("show");
+
+        });
+
+        $(".replyRemove").on("click", function() {
+            var rno = $("input[name='rno']").val();
+
+            // ajax 처리
+            $.ajax({
+                url: "/replies/" + rno,
+                method: "delete",
+                success: function(result) {
+                    if(result === "success") {
+                        alert("댓글이 삭제되었습니다.");
+                        modal.modal("hide");
+                        loadReplyJson();
+                    }
+                }
+            })
+        });
+
+        $(".replyModify").on("click", function() {
+            var rno = $("input[name='rno']").val();
+
+            var reply = {
+                rno: rno,
+                bno: bno,
+                text: $("input[name='replyText']").val(),
+                replyer: $("input[name='replyer']").val()
+            };
+
+            console.log(reply);
+
+            // ajax 처리
+            $.ajax({
+                url: "/replies/" + rno,
+                method: "put",
+                data: JSON.stringify(reply),
+                contentType: "application/json; charset-utf-8",
+                dataType: "json",
+                success: function(rtn) {
+                    console.log(rtn);
+                    if(rtn === "success") {
+                        alert("댓글이 수정되었습니다.");
+                        modal.modal("hide");
+                        loadReplyJson();
+                    }
+                }
+            });
+        });
+
+        $(".replyClose").click(function() {
+            modal.modal("hide");
+        })
+    });
+</script>
