--- a/src/main/resources/templates/uploadEx.html
+++ b/src/main/resources/templates/uploadEx.html
@@ -7,6 +7,8 @@
 <body>
     <input name="uploadFiles" type="file" multiple>
     <button class="uploadBtn">Upload</button>
+    <div class="uploadResult">
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script>
         $(".uploadBtn").on("click", function() {
@@ -26,18 +28,29 @@
             $.ajax({
                 url: "/uploadAjax",
                 processData: false,
-                contentType: false, //
+                contentType: false,
                 data: formData,
                 type: "post",
                 dataType: "json",
                 success: function(result){
                     console.log(result);
+                    showUploadedImages(result);
                 },
                 error: function(XMLHttpRequest, textStatus, errorThrown) {
                     console.log("FileUpload Error: " + textStatus);
                 }
             });
         });
+
+        function showUploadedImages(arr) {
+            console.log(arr);
+
+            var divArea = $(".uploadResult");
+
+            for(var i = 0; i < arr.length; i++) {
+                divArea.append("<img src='/display?fileName=" + arr[i].imageURL + "'>")
+            }
+        }
     </script>
 </body>
 </html>
