--- a/src/main/resources/templates/sample/member.html
+++ b/src/main/resources/templates/sample/member.html
@@ -6,5 +6,22 @@
 </head>
 <body>
     <h1>For Member</h1>
+    <!--ROLE_USER 권한을 갖는다면 이 글이 보임-->
+    <div sec:authorize="hasRole('USER')">Has USER ROLE</div>
+    <div sec:authorize="hasRole('MANAGER')">Has MANAGER ROLE</div>
+    <div sec:authorize="hasRole('ADMIN')">Has ADMIN ROLE</div>
+
+    <!--어떤 권한이건 상관없이 인증이 되었다면 이 글이 보임-->
+    <div sec:authorize="isAuthenticated()">
+        Only Authenticated User can see this Text
+    </div>
+
+    Authenticated UserName:
+    <!--인증시 사용된 객체의 Username (ID)-->
+    <div sec:authentication="name"></div>
+    Authenticated User Roles:
+    <!--객체의 권한-->
+    <div sec:authentication="principal.authorities"></div>
+
 </body>
 </html>
